@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.MastodonRipper;
 import org.junit.jupiter.api.Tag;
@@ -10,8 +11,8 @@ import org.junit.jupiter.api.Test;
 public class MastodonRipperTest extends RippersTest {
     @Test
     @Tag("flaky")
-    public void testRip() throws IOException {
-        MastodonRipper ripper = new MastodonRipper(new URL("https://mastodon.social/@pythonhub/media"));
+    public void testRip() throws IOException, URISyntaxException {
+        MastodonRipper ripper = new MastodonRipper(new URI("https://mastodon.social/@pythonhub/media").toURL());
         testRipper(ripper);
     }
 }
